[package]
authors = ["Alexey Arbuzov <lexx.vir@gmail.com>"]
categories = ["parser-implementations"]
description = "BER-TLV parsing & emitting library"
documentation = "https://lexxvir.github.io/tlv-parser"
keywords = ["tlv"]
license = "MIT/Apache-2.0"
name = "tlv_parser"
readme = "README.md"
repository = "https://github.com/lexxvir/tlv-parser"
version = "0.1.8"

[dependencies]
byteorder = "^1"
failure = "0.1.0"
failure_derive = "0.1.0"
hex = "^0"

[dev-dependencies]
quickcheck = "^0"
