[package]
name = "tlv_parser-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.tlv_parser]
path = ".."

[[bin]]
name = "from_vec"
path = "fuzz_targets/from_vec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "find_val"
path = "fuzz_targets/find_val.rs"
test = false
doc = false
bench = false
